GNOME Bugzilla – Bug 552511
System Monitor described wrongly in help file V2.1
Last modified: 2011-11-11 10:03:55 UTC
this report has been filed here: https://bugs.edge.launchpad.net/ubuntu/+source/gnome-system-monitor/+bug/269168 "The Help File ( ->Help -> Contents ) is System Monitor Manual V2.1 and describes features not present In that manual I found instruction on how to change the background color but the controls described there I cannot find in the application. I refer to help section -> Preferences -> 4.2 Resources which describes Background Color and Grid Color controls that are missing from the application at -> Edit -> Preferences -> Resources. The following sections in the help file describe actions missing from the application: 3.13.1 (to change the background color of graphs) and 3.13.2 (to change the grid color of graphs) as the controls described in those sections are missing from the application. The update to fix the help file should probably link to the theme editor, or wherever the relevant controls have been relocated."
I think the color selection has been moved to the system monitor (system load) applet, because it doesn't make any sense to have it in the main application. I think the solution here would be to remove the description regarding the color selection from the help.
Created attachment 200809 [details] [review] Patch to fix the docs Attached a patch to remove obsolete docs and update the preferences help to match the current interface (only two tabs were listed, as filesystems has been moved from the resources tab to a separate tab). Also fixes a small UI problem duplicating the File Systems string both as tab title and header title. Changed the section header title to match the Processes tab and to avoid duplicated strings. Also fixed small inconsistency in "file system" vs "filesystem" wording to use "file system consistently"
This problem has been fixed in commit ac767cb812e60d9007f6bfe6000afb7423da8bfc in the development version. The fix will be available in the next major software release. Thank you for your bug report.