Updated help to match current interface and improved consistency a bit

https://bugzilla.gnome.org/show_bug.cgi?id=552511