src/procdialogs.cpp
@@ -717,7 +717,7 @@ procdialog_create_preferences_dialog (ProcData *procdata)
     gtk_widget_show (tab_label);
     gtk_notebook_append_page (GTK_NOTEBOOK (notebook), vbox, tab_label);
 
-    tmp = g_strdup_printf ("<b>%s</b>", _("File Systems"));
+    tmp = g_strdup_printf ("<b>%s</b>", _("Behavior"));
     label = gtk_label_new (NULL);
     gtk_misc_set_alignment (GTK_MISC (label), 0.0, 0.5);
     gtk_label_set_markup (GTK_LABEL (label), tmp);
